--- a/about/YauHoFungResume.html
+++ b/about/YauHoFungResume.html
@@ -118,6 +118,34 @@
       table th {
         padding: 0;
       }
+      .c3 {
+        padding-top: 0pt;
+        padding-bottom: 0pt;
+        line-height: 1.15;
+        page-break-after: avoid;
+        orphans: 2;
+        widows: 2;
+        text-align: left;
+        height: 11pt;
+      }
+      .c12 {
+        padding-top: 0pt;
+        padding-bottom: 3pt;
+        line-height: 1.15;
+        page-break-after: avoid;
+        orphans: 2;
+        widows: 2;
+        text-align: left;
+      }
+      .c0 {
+        -webkit-text-decoration-skip: none;
+        color: #1155cc;
+        font-weight: 400;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        font-size: 9pt;
+        font-family: "Times New Roman";
+      }
       .c9 {
         color: #000000;
         font-weight: 400;
@@ -127,7 +155,7 @@
         font-family: "Times New Roman";
         font-style: normal;
       }
-      .c0 {
+      .c4 {
         padding-top: 0pt;
         padding-bottom: 0pt;
         line-height: 1.15;
@@ -145,16 +173,7 @@
         font-family: "Times New Roman";
         font-style: normal;
       }
-      .c11 {
-        padding-top: 0pt;
-        padding-bottom: 3pt;
-        line-height: 1.15;
-        page-break-after: avoid;
-        orphans: 2;
-        widows: 2;
-        text-align: left;
-      }
-      .c8 {
+      .c5 {
         -webkit-text-decoration-skip: none;
         color: #000000;
         text-decoration: underline;
@@ -168,32 +187,29 @@
         text-decoration: underline;
         text-decoration-skip-ink: none;
       }
-      .c5 {
-        background-color: #ffffff;
-        max-width: 540pt;
-        padding: 36pt 36pt 36pt 36pt;
+      .c8 {
+        font-size: 9pt;
+        font-family: "Times New Roman";
+        font-weight: 400;
       }
-      .c3 {
+      .c1 {
         font-size: 9pt;
         font-family: "Times New Roman";
         font-weight: 700;
       }
-      .c6 {
-        font-size: 9pt;
-        font-family: "Times New Roman";
-        font-weight: 400;
+      .c11 {
+        background-color: #ffffff;
+        max-width: 540pt;
+        padding: 36pt 36pt 36pt 36pt;
       }
       .c10 {
         -webkit-text-decoration-skip: none;
         text-decoration: underline;
         text-decoration-skip-ink: none;
       }
-      .c1 {
+      .c6 {
         color: inherit;
         text-decoration: inherit;
-      }
-      .c4 {
-        height: 11pt;
       }
       .title {
         padding-top: 0pt;
@@ -305,69 +321,69 @@
       }
     </style>
   </head>
-  <body class="c5">
-    <p class="c11 title" id="h.i0wgzwj9czi3">
+  <body class="c11">
+    <p class="c12 title" id="h.i0wgzwj9czi3">
       <span class="c9">Fung, Yau Ho</span>
     </p>
-    <p class="c0">
-      <span class="c7 c6"
-        ><a class="c1" href="mailto:yauho.fung@student.mec.cuny.edu"
+    <p class="c4">
+      <span class="c0"
+        ><a class="c6" href="mailto:yauho.fung@student.mec.cuny.edu"
           >Email</a
         ></span
-      ><span class="c6">&nbsp;| </span
-      ><span class="c7 c6"
+      ><span class="c8">&nbsp;| </span
+      ><span class="c0"
         ><a
-          class="c1"
-          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1650294373699812&amp;usg=AOvVaw3zEIJECbISwjQSE1cVjdl3"
+          class="c6"
+          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1651877030300561&amp;usg=AOvVaw3EAlE6d1RtApo4Q5UoQrg9"
           >GitHub</a
         ></span
-      ><span class="c6">&nbsp;| </span
-      ><span class="c7 c6"
+      ><span class="c8">&nbsp;| </span
+      ><span class="c0"
         ><a
-          class="c1"
-          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1650294373700243&amp;usg=AOvVaw09xTOdEBYqY58NMvlfOK6E"
+          class="c6"
+          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1651877030300857&amp;usg=AOvVaw2ssVkDyqoWLrZDh2mIlH0g"
           >LinkedIn</a
         ></span
       >
     </p>
-    <p class="c0 c4"><span class="c2"></span></p>
-    <p class="c0"><span class="c3 c10">QUALIFICATIONS</span></p>
-    <p class="c0">
-      <span class="c3">Programming Languages:</span
+    <p class="c3"><span class="c2"></span></p>
+    <p class="c4"><span class="c1 c10">QUALIFICATIONS</span></p>
+    <p class="c4">
+      <span class="c1">Programming Languages:</span
       ><span class="c2"
         >&nbsp;C++, MATLAB, HTML, CSS, JavaScript, Python, Java, SQL</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">Libraries:</span
+    <p class="c4">
+      <span class="c1">Libraries:</span
       ><span class="c2"
         >&nbsp;React Native, Material-UI, ReactJS, Materialize, NativeBase,
         NumPy, Pandas, Matplotlib, GeoPandas, Cartopy, HoloViews, GeoViews</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">Version Control:</span
+    <p class="c4">
+      <span class="c1">Version Control:</span
       ><span class="c2"
         >&nbsp;GitHub, GitLab, Slack, Trello, Jira, Confluence</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">Editors:</span
+    <p class="c4">
+      <span class="c1">Editors:</span
       ><span class="c2">&nbsp;Visual Studio Code, Replit, VIM</span>
     </p>
-    <p class="c0">
-      <span class="c3">Languages:</span
-      ><span class="c6">&nbsp;English, Cantonese, Mandarin</span>
+    <p class="c4">
+      <span class="c1">Languages:</span
+      ><span class="c8">&nbsp;English, Cantonese, Mandarin</span>
     </p>
-    <p class="c0 c4"><span class="c2"></span></p>
-    <p class="c0"><span class="c8 c3">EXPERIENCE</span></p>
-    <p class="c0">
-      <span class="c3"
+    <p class="c3"><span class="c2"></span></p>
+    <p class="c4"><span class="c1 c5">EXPERIENCE</span></p>
+    <p class="c4">
+      <span class="c1"
         >NASA Goddard Space Flight Center, GISS RSP Software Development
         Intern</span
-      ><span class="c2">&nbsp;(January 2022 - May 2022)</span>
+      ><span class="c2">&nbsp;(January 2022 - August 2022)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Study the remote sensing process of collecting data on aerosols using
         the Research Scanning Polarimeter (RSP) instrument. Debug and improve
@@ -377,24 +393,24 @@
         present weekly findings.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3"
+    <p class="c4">
+      <span class="c1"
         >CUNY Medgar Evers College, Tech Talent Pipeline Teaching
         Assistant</span
       ><span class="c2">&nbsp;(January 2022 - January 2022)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Assist the primary instructor&rsquo;s lectures and provide technical
         consultation during working sessions. Meet with the instructional staff
         for daily debriefings.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">The University of Vermont, NASA R3 Hackathon Worker</span
+    <p class="c4">
+      <span class="c1">The University of Vermont, NASA R3 Hackathon Worker</span
       ><span class="c2">&nbsp;(November 2021 - January 2022)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Study the fundamental land cover classes as the application domain
         knowledge. Perform image labeling using Amazon SageMaker Ground Truth.
@@ -405,13 +421,13 @@
         the training experiences and their effectiveness.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">Uvii, Inc.</span
-      ><span class="c3">, Associate Project Manager</span
-      ><span class="c6">&nbsp;(</span
+    <p class="c4">
+      <span class="c1">Uvii, Inc.</span
+      ><span class="c1">, Associate Project Manager</span
+      ><span class="c8">&nbsp;(</span
       ><span class="c2">August 2021 - January 2022)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Document goals for sprints. Meet with the development team to discuss
         blockers. Delegate founder assignments to team members. Review tasks
@@ -419,126 +435,131 @@
         the company drive.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3"
+    <p class="c4">
+      <span class="c1"
         >CUNY Medgar Evers College, CS Dojo Teaching Assistant</span
       ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Design weekly C++ projects. Meet with students to receive progress
         updates and offer programming assistance. Verify weekly submissions for
         completions.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
+    <p class="c4">
+      <span class="c1">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
       ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Host weekly office hours. Schedule one-on-one meetings with CS/CIS
         students in need of tutoring.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3">Uvii, Inc., Quality Assurance Tester / Debugger</span
-      ><span class="c6">&nbsp;(</span
+    <p class="c4">
+      <span class="c1">Uvii, Inc., Quality Assurance Tester / Debugger</span
+      ><span class="c8">&nbsp;(</span
       ><span class="c2">June 2021 - August 2021)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Stress test features for bugs and improvements. Submit bug
         reports/fixes to the development team for review. Support the product
         team with UI/UX insights.</span
       >
     </p>
-    <p class="c0">
-      <span class="c3"
+    <p class="c4">
+      <span class="c1"
         >MEC Education Technology Center, Computer Lab Technician</span
-      ><span class="c6">&nbsp;(</span
+      ><span class="c8">&nbsp;(</span
       ><span class="c2">October 2019 - March 2020)</span>
     </p>
-    <p class="c0">
+    <p class="c4">
       <span class="c2"
         >Provide students and faculty with CUNY Blackboard support. Respond to
         phone calls and orders from the supervisor.</span
       >
     </p>
-    <p class="c0 c4"><span class="c2"></span></p>
-    <p class="c0"><span class="c8 c3">PROJECTS</span></p>
-    <p class="c0">
-      <span class="c3 c7"
+    <p class="c3"><span class="c2"></span></p>
+    <p class="c4"><span class="c5 c1">PROJECTS</span></p>
+    <p class="c4">
+      <span class="c1 c7"
         ><a
-          class="c1"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1650294373707099&amp;usg=AOvVaw2hPgkJTm2Ph13kdHeCj7Jk"
+          class="c6"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1651877030303055&amp;usg=AOvVaw2xqpzo_WpfT8nYB2yIg7K4"
           >MATLAB Pandemic Simulation</a
         ></span
-      ><span class="c3">, Scientific Programming Final Project</span
-      ><span class="c6">&nbsp;(December 2021)</span>
+      ><span class="c1">, Scientific Programming Final Project</span
+      ><span class="c8">&nbsp;(December 2021)</span>
     </p>
-    <p class="c0">
-      <span class="c7 c3"
+    <p class="c4">
+      <span class="c7 c1"
         ><a
-          class="c1"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1650294373707825&amp;usg=AOvVaw2KJDS0RVfWa3JEplSP0cyp"
+          class="c6"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1651877030303391&amp;usg=AOvVaw2NcEekbmT16B7EPSFj_dGX"
           >C++ Animation Test</a
         ></span
-      ><span class="c3">, Personal Experimental Project</span
+      ><span class="c1">, Personal Experimental Project</span
       ><span class="c2">&nbsp;(November 2021)</span>
     </p>
-    <p class="c0">
-      <span class="c7 c3"
+    <p class="c4">
+      <span class="c7 c1"
         ><a
-          class="c1"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1650294373708309&amp;usg=AOvVaw3X_vZ7HrxbnILlD-tuKIZx"
+          class="c6"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1651877030303699&amp;usg=AOvVaw00qTIqRpDnc6OlKGqjERiB"
           >Movie Search Engine</a
         ></span
-      ><span class="c3">, CUNY 2X Tech Talent Pipeline Capstone Project</span
+      ><span class="c1">, CUNY 2X Tech Talent Pipeline Capstone Project</span
       ><span class="c2">&nbsp;(January 2021)</span>
     </p>
-    <p class="c0">
-      <span class="c7 c3"
+    <p class="c4">
+      <span class="c7 c1"
         ><a
-          class="c1"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1650294373708712&amp;usg=AOvVaw0uQ7Z4iz9TsHGYFuqDP3XY"
+          class="c6"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1651877030303999&amp;usg=AOvVaw1Q5sGDgCzHEQ0jz56tOrmw"
           >C++ Random Generator</a
         ></span
-      ><span class="c3">, Personal Experimental Project</span
+      ><span class="c1">, Personal Experimental Project</span
       ><span class="c2">&nbsp;(October 2019)</span>
     </p>
-    <p class="c0 c4"><span class="c2"></span></p>
-    <p class="c0"><span class="c3 c8">EDUCATION</span></p>
-    <p class="c0">
-      <span class="c3">CUNY </span
-      ><span class="c3">Medgar Evers College, Computer Science B.S.</span
+    <p class="c3"><span class="c2"></span></p>
+    <p class="c4"><span class="c5 c1">EDUCATION</span></p>
+    <p class="c4">
+      <span class="c1">CUNY </span
+      ><span class="c1">Medgar Evers College, Computer Science B.S.</span
       ><span class="c2">&nbsp;(August 2018 - December 2021)</span>
     </p>
-    <p class="c0"><span class="c2">3.928 GPA</span></p>
-    <p class="c0 c4"><span class="c2"></span></p>
-    <p class="c0"><span class="c8 c3">ACHIEVEMENTS</span></p>
-    <p class="c0">
-      <span class="c3">CUNY Medgar Evers College, </span
-      ><span class="c3">Dean&rsquo;s List</span
+    <p class="c4"><span class="c2">3.928 GPA</span></p>
+    <p class="c3"><span class="c2"></span></p>
+    <p class="c4"><span class="c5 c1">ACHIEVEMENTS</span></p>
+    <p class="c4">
+      <span class="c1"
+        >CUNY Medgar Evers College, Valedictorian of the Class of 2022</span
+      ><span class="c2">&nbsp;(June 2022)</span>
+    </p>
+    <p class="c4">
+      <span class="c1">CUNY Medgar Evers College, </span
+      ><span class="c1">Dean&rsquo;s List</span
       ><span class="c2"
         >&nbsp;(June 2021, December 2020, June 2020, January 2020, June
         2019)</span
       >
     </p>
-    <p class="c0">
-      <span class="c3"
+    <p class="c4">
+      <span class="c1"
         >CUNY Medgar Evers College, Award of Outstanding Academic
         Excellence</span
       ><span class="c2">&nbsp;(May 2020)</span>
     </p>
-    <p class="c0">
-      <span class="c3"
+    <p class="c4">
+      <span class="c1"
         >CUNY Medgar Evers College, First Place Winner of the CS Students
         Programming Contest</span
       ><span class="c2">&nbsp;(May 2020)</span>
     </p>
-    <p class="c0">
-      <span class="c3">College Board, AP Scholar with Distinction</span
+    <p class="c4">
+      <span class="c1">College Board, AP Scholar with Distinction</span
       ><span class="c2">&nbsp;(July 2018)</span>
     </p>
   </body>
